# pytest-mypy-testing

./: pyproject.toml  setup.py
pytest_mypy_testing/: plugin.py
