[tool.poetry]
name = "pytest-mypy-testing"
version = "0.1.0"
description = ""
authors = ["mark-todd <markpeter.todd@hotmail.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
basedmypy = "^2.3.0"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins.pytest11]
"pytest_mypy_testing" = "pytest_mypy_testing.plugin"